# bookmark-sync

./: AGENTS.md  AI-CONTEXT.md  APP_README.md  CLAUDE.md  GEMINI.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
bookmark-sync-app/: README.md  package-lock.json  package.json
bookmark-sync-app/src/: App.css  App.realtime.test.tsx  App.test.tsx  App.tsx
bookmark-sync-app/src-tauri/: Cargo.toml  tauri.conf.json
browser-extension/: background-sync.js  background-sync.test.js  background.js  manifest.json
browser-extension/native-host/: db-path.js  db-path.test.js  db-writer.js  db-writer.test.js  full-sync.test.js  host-init.test.js  host.js  install_mac.sh  manifest.json  package-lock.json  package.json
browser-extension/scripts/: import_chrome_mac.js
docs/: AI_CHANGELOG.md  dev-plan.md  requirstment.md  technical-design.md
docs/adr/: 2026-03-10-data-source-toggle.md
docs/plans/: 2026-03-10-data-source-toggle-design.md  2026-03-10-data-source-toggle-ui-design.md  2026-03-10-data-source-toggle-ui.md  2026-03-10-data-source-toggle.md  2026-03-10-white-screen-deadlock-design.md  2026-03-10-white-screen-deadlock.md
src/: App.realtime.test.tsx  App.test.tsx  App.tsx  errorCapture.test.ts  errorCapture.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/db/: mod.rs  postgres.rs  router.rs  sqlite.rs  store.rs
src-tauri/src/events/: cleaner.rs  cleanup.rs  device_registry.rs  metadata.rs  mod.rs  models.rs  native_ingest.rs  segment.rs
src-tauri/src/sync/: mod.rs
(+14 files in other folders)
